# NeuROM

./: .gitignore  .gitlab-ci.yml  CITATION.cff  FilteredHiDeNN_PDE.py  Filtering_test.py  HiDeNN_PDE.py  HiDeNN_PDE_revert_step.py  Notebook_Fig_10.ipynb  Notebook_Fig_12-13.ipynb  Notebook_Fig_12.ipynb  Notebook_Fig_8ac.ipynb  Notebook_Fig_8bd.ipynb  Notebook_Fig_9.ipynb  README.md  generate_evaluation_points.py  launch_script.py  main.py  main[legacy].py  main_1D.py  main_1D_weak_eq.py  main_2D.py  main_2D_Rectangle.py  main_2D_Rectangle_1.py  main_2D_Rectangle_Multiscale.py  main_2D_Square.py  main_2D_Square_Multiscale.py  main_NeuROM.py  main_NeuROM_2D.py  main_NonIntegralMixedForm.py  main_integral_2D.py  main_residual_2D.py  pyproject.toml  setup.py
Configuration/: config.toml  config_1D.toml  config_1D_Mixed.toml  config_2D.toml  config_2D_ROM.toml  config_2D_ROM_NH.toml  config_3D.toml  config_3D_ROM.toml
Geometries/: 1element_Rectangle_order_1_5.0.vtk  2element_Rectangle_order_1_5.0.vtk  Beam.geo  Beam_order_1_0.8333333333333334.vtk  Cube_hole.geo  Hole.geo  Hole_3.geo  Rectange.geo  Rectangle.geo  Rectangle_order_1_2.5.vtk  Rectangle_order_1_2.5.xml  Rectangle_order_1_2.5_all_nodes.npy  Rectangle_order_1_2_3.vtk  Rectangle_order_1_2_3.xml  Rectangle_order_1_2_3_all_nodes.npy  Rectangle_order_1_30_100.vtk  Rectangle_order_1_30_100.xml  Rectangle_order_1_30_100_all_nodes.npy  Rectangle_order_1_5.0.vtk  Rectangle_order_1_5.0.xml  Rectangle_order_1_5.0_all_nodes.npy  Rectangle_order_1_50_100.vtk  Rectangle_order_1_50_100.xml  Rectangle_order_1_50_100_all_nodes.npy  (+58 more)
(+386 files in other folders)
