[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neurom"
version = "0.1.0"
description = "Various POC for HideNN framework using pytorch."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "torch>=2.10.0",
]

#Install with:
#`pip install -e .[dev]`
#`pip install -e .[docs]`
[project.optional-dependencies]
dev = [
   "pytest>=9.0.2",
   "ruff>=0.14.10",
]
docs = [
    "sphinx",
    "sphinx-autoapi>=3.6.1",
    "myst-parser",
    "sphinx-autodoc-typehints",
    "sphinx-design>=0.7.0",
    "sphinx-rtd-theme",
    "sphinx-copybutton",
]

#Required for `uv` install:
#uv sync --group dev --group docs
[dependency-groups]
dev = [
   "pytest>=9.0.2",
   "ruff>=0.14.10",
]
docs = [
    "sphinx",
    "sphinx-autoapi>=3.6.1",
    "myst-parser",
    "sphinx-autodoc-typehints",
    "sphinx-design>=0.7.0",
    "sphinx-rtd-theme",
    "sphinx-copybutton",
]

#Path to the library source code
[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
#Path to the tests folder
testpaths = ["tests"]
#Recommended for new projects: https://docs.pytest.org/en/stable/explanation/goodpractices.html
addopts = ["--import-mode=importlib"]

[tool.coverage.run]
branch = true
source = ["neurom"]
